adjust container margins, fix footer heading fonts, vertical alignment on mobile nav titles, horizontal spacing of filters on work page

--- a/src/styles/config/_layout.scss
+++ b/src/styles/config/_layout.scss
@@ -4,4 +4,12 @@
   margin: 0 auto;
   padding: 0 var(--unit-6);
   max-width: calc(1540px + var(--unit-12));
+
+  @include bp-1 {
+    padding: 0 var(--unit-10);
+  }
+  
+  @include bp-2 {
+    padding: 0 var(--unit-13);
+  }
 }
